# OMSens_Qt

./: .gitignore  .gitmodules  CMakeLists.txt  CURVISensAnalysisDialog.cpp  CURVISensAnalysisDialog.h  DoubleSpinboxAdapted.h  DualLists.cpp  DualLists.h  EmpSensAnalysisDialog.cpp  EmpSensAnalysisDialog.h  ForceSignDoubleSpinbox.h  ImageViewer.cpp  ImageViewer.h  IndivParamSensAnalysisDialog.cpp  IndivParamSensAnalysisDialog.h  Makefile  Makefile.omdev.mingw  Makefile.unix.in  MultiParamSweepDialog.cpp  MultiParamSweepDialog.h  OMSens.pro  OMSensDialog.cpp  OMSensDialog.h  OMSensPlugin.cpp  OMSensPlugin.h  OMSens_Qt.pro  OMSens_Qt_plugin.pri  README.md  SciNotDoubleSpinbox.h  SciNotationDoubleSpinbox.h  SensitivityAnalysisResultDialog.cpp  SensitivityAnalysisResultDialog.h  TableItemDelegate.h  VectorialParamSensAnalysisDialog.cpp  VectorialParamSensAnalysisDialog.h  configure.ac  libomsensplugin.so.1  libomsensplugin.so.1.0.0  main.cpp  moc_BaseResultsDialog.cpp  (+43 more)
Util/: Utilities.cpp  Utilities.h
dialogs/: BaseResultsDialog.h  BaseRunSpecsDialog.h  PlotsDialog.cpp  PlotsDialog.h
dialogs/constrained/: ConstrainedIntervalSensAnalysisDialog.cpp  ConstrainedIntervalSensAnalysisDialog.h
dialogs/functions/: HistogramCreator.cpp  HistogramCreator.h  LinesPlotVisualizer.cpp  LinesPlotVisualizer.h  ScatterPlotCreator.cpp  ScatterPlotCreator.h
dialogs/general/: CSVViewerDialog.cpp  CSVViewerDialog.h  ImageViewerDialog.cpp  ImageViewerDialog.h
dialogs/help/: HelpBrowser.cpp  HelpBrowser.h
dialogs/indiv/: IndivParamSensAnalysisDialog.cpp  IndivParamSensAnalysisDialog.h  IndivSensAnalTypeDialog.cpp  IndivSensAnalTypeDialog.h  IndivSensResultsDialog.cpp  IndivSensResultsDialog.h  help.html
dialogs/sweep/: MultiParamSweepDialog.cpp  MultiParamSweepDialog.h  PlotFromDataDialog.cpp  PlotFromDataDialog.h  SweepFromDataDialog.cpp  SweepFromDataDialog.h  SweepResultDialog.cpp  SweepResultDialog.h  help.html  sweepfromdatadialog.cpp  sweepfromdatadialog.h
dialogs/vect/: VectorialParamSensAnalysisDialog.cpp  VectorialParamSensAnalysisDialog.cpp.autosave  VectorialParamSensAnalysisDialog.h  VectorialResultsDialog.cpp  VectorialResultsDialog.h  help.html
helpers/: CSVReader.cpp  CSVReader.h
omedit_plugin/: interfaces.h  model.cpp  model.h
resource/help/: help.html
specs/: ConstrainedIntervalSpecs.cpp  ConstrainedIntervalSpecs.h  FixedParameterPerturbation.cpp  FixedParameterPerturbation.h  IndivSpecs.cpp  IndivSpecs.h  RunSpecifications.h  SweepSpecs.cpp  SweepSpecs.h  SweepingParameterPerturbation.cpp  SweepingParameterPerturbation.h  VectSpecs.cpp  VectSpecs.h
tabs/: HelpTab.cpp  HelpTab.h  OptimizationTab.cpp  OptimizationTab.h  ParameterCombinationRunMap.cpp  ParameterCombinationRunMap.h  ParametersExtendedTab.cpp  ParametersExtendedTab.h  ParametersSimpleTab.cpp  ParametersSimpleTab.h  PerturbationTab.cpp  PerturbationTab.h  PlotOptimizationTab.cpp  PlotOptimizationTab.h  PlotSweepTab.cpp  PlotSweepTab.h  PlotsTab.cpp  PlotsTab.h  SensitivityMethodResultsTab.cpp  SensitivityMethodResultsTab.h  SimulationTab.cpp  SimulationTab.h  VariablesTab.cpp  VariablesTab.h
tabs/optim_result/: OptimizationResultOtherTab.cpp  OptimizationResultOtherTab.h  OptimizationResultParametersTab.cpp  OptimizationResultParametersTab.h
tabs/sweep_result/: SweepResultVariableTab.cpp  SweepResultVariableTab.h
